18808
{noformat}
[warn] v2.11.0-M8 failed, using closest available
Welcome to Scala version 2.11.0-20140117-031050-a5b0fc49e5 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_37).
Type in expressions to have them evaluated.
Type :help for more information.

scala> reflect.internal.util.Position.offset(newSourceFile("  \n"), 1).lineContent
<console>:8: error: not found: value newSourceFile
              reflect.internal.util.Position.offset(newSourceFile("  \n"), 1).lineContent
                                                    ^

scala> :power
** Power User mode enabled - BEEP WHIR GYVE **
** :phase has been set to 'typer'.          **
** scala.tools.nsc._ has been imported      **
** global._, definitions._ also imported    **
** Try  :help, :vals, power.<tab>           **

scala> reflect.internal.util.Position.offset(newSourceFile("  \n"), 1).lineContent
res1: String = "  "

scala> reflect.internal.util.Position.offset(newSourceFile("  "), 1).lineContent
java.lang.ArrayIndexOutOfBoundsException: -2147483648
  at scala.reflect.internal.util.BatchSourceFile.notCRLF0$1(SourceFile.scala:139)
{noformat}

Thanks to @huitseeker for the report. 

https://jenkins.scala-ide.org:8496/jenkins/job/scala-search-nightly-master-2.11/lastCompletedBuild/consoleFull
